<resources>
    <string name="app_name">QrCode</string>
    <string name="webapp">"https://simonmarquis.github.io/QrCode/"</string>
    <string name="status_scanning">Scanning…</string>
    <string name="copied_to_clipboard">Copied to clipboard!</string>
    <string name="content_description_icon">Icon</string>
    <string name="content_description_copy">Copy</string>
    <string name="content_description_open">Open</string>
    <string name="content_description_more">Settings</string>
    <string name="menu_item_scanner">⚙️ Processor</string>
    <string name="menu_item_scanner_mlkit">🔥 Firebase ML Kit</string>
    <string name="menu_item_scanner_zxing">🦓 ZXing</string>
    <string name="menu_item_mode">⚡ Behavior</string>
    <string name="menu_item_mode_manual">👉 Manual</string>
    <string name="menu_item_mode_auto">🤖 Automatic</string>
    <string name="menu_item_generator">✏️ Generator</string>
    <string name="menu_item_theme">🎨 Theme</string>
    <string name="menu_item_theme_system">📱 System</string>
    <string name="menu_item_theme_dark">🌑 Dark</string>
    <string name="menu_item_theme_light">☀ Light</string>
    <string name="toast_camera_permission_required">Camera permission is required!</string>
    <string name="toast_decoder_did_not_find_anything">Nothing found…</string>
    <string name="single_decoder_activity_label">Scan</string>
</resources>
