<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <io.fotoapparat.view.CameraView
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true">

        <io.fotoapparat.view.FocusView
            android:id="@+id/focus"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </io.fotoapparat.view.CameraView>

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="@dimen/bottom_sheet_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bottom_sheet_background"
        android:divider="@drawable/divider_8dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:showDividers="beginning|middle|end"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Light"
        app:behavior_peekHeight="64dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:showDividers="middle">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:padding="4dp" />

            <ImageView
                android:id="@+id/icon_imageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description_icon"
                android:padding="8dp"
                android:visibility="gone"
                tools:src="@drawable/ic_subject_black_24dp"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/title_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:lines="1"
                android:minHeight="48dp"
                android:text="@string/status_scanning"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:textColor="#000" />

            <ImageView
                android:id="@+id/action_copy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/content_description_copy"
                android:padding="8dp"
                android:src="@drawable/ic_content_copy_black_24dp"
                android:visibility="gone"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/action_open"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/content_description_open"
                android:padding="8dp"
                android:src="@drawable/ic_open_in_new_black_24dp"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

        <TextView
            android:id="@+id/details_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/raw_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>